@@ -4,6 +4,7 @@ Application Changes:
 - Skill group rating maxima now also follow values set in character settings for maximum skill ratings.
 - Disabling the setting that allows skills to be regrouped now properly makes skill groups remain broken after character creation if they are broken at least once.
 - Fixed issues where setting a character to ignore character creation rules still did not allow them to spend skill points and karma as freely as they should have.
+- The house rule to compensate the karma cost for raising the last skill in a broken skill group is no longer overwritten by bonuses that set a minimum karma cost for learning skills.
 
 Build 222
 Application Changes:
